<resources>
    <!-- Main -->
    <string name="app_name" translatable="false">Paws</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="facebook_app_id" translatable="false">891969328182204</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb891969328182204</string>


    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="search">Search</string>

    <!-- Home title -->
    <string name="resuces_home">Rescues</string>
    <string name="profile_home">Profile</string>
    <string name="charity_home">Charities</string>
    <string name="fun_fact_home">Fun Facts</string>
    <string name="photo_album_home">Photo Album</string>
    <string name="sign_out_home">Sign out</string>

    <!-- placeholder text -->
    <string name="test_string" translatable="false">Test String</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris placerat lectus ligula, in finibus erat volutpat in. Vestibulum ex ligula, pharetra sed consectetur eu, scelerisque eget dolor.</string>
    <string name="mobile_placeholder" translatable="false">966561231234</string>

    <!-- User title -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reconfirm_password">Reconfirm Password</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="charity_group">Charity Group</string>

    <!-- Group title -->
    <string name="charity">Charity</string>
    <string name="founder">Founder</string>
    <string name="stc_pay_mobile">STC Pay Mobile</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="basic_information">Basic Information</string>
    <string name="help_us_via_donations">Help us via donations</string>
    <string name="charity_location">Charity Location</string>

    <!-- Animal title -->
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="breed">Breed</string>
    <string name="color">Color</string>
    <string name="personality">Personality</string>
    <string name="type">Type</string>
    <string name="statues">Statues</string>
    <string name="location">Location</string>
    <string name="grooming_needs">Grooming needs</string>
    <string name="medical_needs">Medical needs</string>

    <!-- Toast message -->
    <string name="required">Required</string>
    <string name="all_required">Verify all fields are correct</string>
    <string name="login_warning">The email/password was incorrect</string>
    <string name="login_required">Email and password are required to login</string>
    <string name="successful_edit_charity">Charity successfully updated</string>
    <string name="failure_edit_charity">Could not update the Charity</string>
    <string name="successful_add_charity">Charity successfully added</string>
    <string name="failure_add_charity">Could not add the Charity</string>
    <string name="successful_edit_animal">Animal successfully updated</string>
    <string name="failure_edit_animal">Could not update the Animal</string>
    <string name="successful_add_animal">Animal successfully added</string>
    <string name="failure_add_animal">Could not add the Animal</string>
    <string name="successful_edit_user">Profile successfully updated</string>
    <string name="failure_edit_user">Could not updated the Profile</string>
    <string name="link_error">could not open link</string>
    <string name="or_connect_with">or connect with</string>
    <string name="email_subject_temp">Inquiring About ...</string>
    <string name="email_intro_temp">Dear Sir/Madam, I would like to inquiry about</string>
    <string name="refresh">Refresh</string>
    <string name="netowrk_issues_msg">Connect to the network and try again.</string>
    <string name="network_issue_title">No Network Connection</string>
    <string name="delete">Delete</string>
    <string name="successful_delete_charity">successfully delete charity</string>
    <string name="successful_delete_animal">successfully delete animal</string>
    <string name="failure_delete_animal">could not delete animal</string>
    <string name="failure_delete_charity">could not delete charity</string>
    <string name="notfication_msg_1">Check out new fun facts about Cats!!</string>
    <string name="location_required_msg">Permission must be granted in order to access Locations and Google Maps</string>
    <string name="incorrect_email">Email does not follow the correct format</string>
    <string name="incorrect_password">should be at least 8 characters, 2 digits and no symbols</string>
    <string name="incorrect_mobile">should be between 9 to 12 digits</string>
    <string name="incorrect_link">The link is not in the correct format</string>
    <string name="mismatch_text">Does not match password</string>
    <string name="location_error">Could not show location</string>
    <string name="welcome_msg">Welcome Back</string>
    <string name="create_account_msg">Create Account</string>
    <string name="create">Create</string>
    <string name="view_error_general">Could not view this content. Please try again later.</string>
    <string name="address_error">Could not get address</string>
    <string name="donation_msg">Rescued animals need you help</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zero">0</string>
    <string name="store_home">Store</string>
    <string name="vet_home">Vet</string>
    <string name="signout_title">Signing out</string>
    <string name="signout_msg">Are you sure you want to sign out?</string>
    <string name="cancel">Cancel</string>

</resources>